--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "dev": "vite",
     "test": "jest"
   },
+  "proxy": "http://localhost:8081",
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.0",
     "@mui/material": "^6.1.0",
     "@mui/styled-engine-sc": "^6.1.0",
+    "axios": "^1.7.7",
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
